--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,19 +1,30 @@
-<h1><%= @cocktail.name %></h1>
-<ul>
-  <% @cocktail.doses.each do |dose| %>
-    <li><%= dose.description %> - <%= dose.ingredient.name %> - <%= link_to "delete", cocktail_dose_path(@cocktail, dose), method: :delete %>
-    </li>
-  <% end %>
-</ul>
 
-<h4>Add dosage</h4>
-<%= simple_form_for([@cocktail, @dose]) do |f| %>
-    <%= f.input :description %>
-    <%= f.association :ingredient %>
-    <%= f.submit "Add here", class: "btn btn-success" %>
-<% end %>
+<div class="container">
+  <div class="row">
+   <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
+      <h1><%= @cocktail.name %></h1>
 
-<%= link_to 'Back', cocktails_path %>
+      <h3>This cocktail has:</h3>
+      <ul>
+        <% @cocktail.doses.each do |dose| %>
+          <li><%= dose.description %> | <%= dose.ingredient.name %> - <%= link_to "delete", dose_path(dose), method: :delete %>
+          </li>
+        <% end %>
+      </ul>
+
+      <h4>Add dosage</h4>
+
+      <%= simple_form_for([@cocktail, @dose]) do |f| %>
+         <%= f.input :description, label: "Amount" %>
+         <%= f.association :ingredient, label: "Choose the corresponding ingredient" %>
+         <%= f.submit "Add here", class: "btn btn-success" %>
+     <% end %>
+     <%= link_to 'Back', cocktails_path %>
+     </div>
+    </div>
+</div>
+
+
 
 
 
