Add figaro - Protect my secret data in config/application.yml

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -7,7 +7,9 @@
       <h3>This cocktail has:</h3>
       <ul>
         <% @cocktail.doses.each do |dose| %>
-          <li><%= dose.description %> | <%= dose.ingredient.name %> - <%= link_to "delete", dose_path(dose), method: :delete %>
+          <li><%= dose.description %> | <%= dose.ingredient.name %> - <%= link_to(dose_path(dose), method: :delete) do %>
+              <i class="fas fa-trash-alt"></i>
+            <% end %>
           </li>
         <% end %>
       </ul>
