--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,14 @@
 // Specific CSS for your home-page
+.image_tag {
+  border-radius: 5px;
+  width: 100%;
+  height: 100%
+}
+
+.headers {
+  display: flex;
+  justify-content: space-around;
+}
+.item {
+  margin-bottom: 20px;
+}
