--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,66 @@
-<h2>List of cocktails</h2>
-<ul>
+<div class="navbar-wagon">
+  <!-- Logo -->
+  <%= image_tag("https://www.freelogoservices.com/api/main/images/1j+ojVVCOMkX9Wyrexe4hGfR37bA5QwXx1uPwWJpZyYVrFthlCAuhfts8fs...PFheuBBO1hkOd8Q9iCN+UIkX", :alt => "logo", class: "logo-cocktail") %>
+
+  <!-- Right Navigation -->
+  <div class="navbar-wagon-right hidden-xs hidden-sm">
+    <%= link_to "Create a cocktail", new_cocktail_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
+
+    <!-- Profile picture with dropdown list -->
+    <div class="navbar-wagon-item">
+      <div class="dropdown">
+        <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+
+      </div>
+    </div>
+  </div>
+    <div class="navbar-wagon-item hidden-md hidden-lg">
+    <div class="dropdown">
+      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+        <li><a href="#">Host</a></li>
+
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="headers">
+  <h2>Welcome to Happy Hour! </h2>
+</div>
+<br>
+<div class="container">
+ <div class="row">
   <% @cocktails.each do |cocktail| %>
-    <li><%= link_to cocktail.name, cocktail_path(cocktail) %></li>
-  <% end %>
-</ul>
-<%= link_to "Create a new cocktail", new_cocktail_path %>
+    <div class="item col-xs-12 col-sm-6 col-md-4">
+       <div class="card">
+        <div class="card-category"><%= ["Popular", "New", "Classic"].sample %></div>
+        <div class="card-description"><%= cocktail.name %></div>
+
+          <% if cocktail.photo_url == nil %>
+            <%= link_to cocktail_path(cocktail) do %>
+              <%= image_tag "https://source.unsplash.com/1600x900/?cocktail", class: "image_tag" %>
+            <% end %>
+          <% else %>
+            <%= link_to cocktail_path(cocktail) do %>
+              <%= cl_image_tag cocktail.photo, class: "image_tag"%>
+            <% end %>
+          <% end %>
+      </div>
+    </div>
+   <% end %>
+ </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
