--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,52 @@
-<h3>Create a new cocktail</h3>
-<%= simple_form_for(@cocktail) do |f| %>
-    <%= f.input :name %>
-    <%= f.submit "Create it!", class: "btn btn-primary" %>
-<% end %>
+<div class="navbar-wagon">
+  <!-- Logo -->
+  <%= image_tag("https://www.freelogoservices.com/api/main/images/1j+ojVVCOMkX9Wyrexe4hGfR37bA5QwXx1uPwWJpZyYVrFthlCAuhfts8fs...PFheuBBO1hkOd8Q9iCN+UIkX", :alt => "logo", class: "logo-cocktail") %>
+
+  <!-- Right Navigation -->
+  <div class="navbar-wagon-right hidden-xs hidden-sm">
+    <%= link_to "Back", cocktails_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
+
+    <!-- Profile picture with dropdown list -->
+    <div class="navbar-wagon-item">
+      <div class="dropdown">
+        <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+
+      </div>
+    </div>
+  </div>
+    <div class="navbar-wagon-item hidden-md hidden-lg">
+    <div class="dropdown">
+      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+        <li><a href="#">Host</a></li>
+
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1496318447583-f524534e9ce1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c405034528cf04acab707e51be371d3c&auto=format&fit=crop&w=2005&q=80');">
+  <div class="banner-content">
+    <h1>Create a new cocktail</h1>
+    <p style="font-size: 26px;">Get drunk. You deserve it!</p>
+  </div>
+</div>
+<div class="container">
+  <div class="form-group">
+     <div class="row form-cocktail col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
+      <%= simple_form_for(@cocktail) do |f| %>
+          <%= f.input :name %>
+          <%= f.input :photo %>
+          <%= f.input :photo_cache, as: :hidden %>
+          <%= f.submit "Create it!", class: "btn btn-primary"%>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
