--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,19 +1,53 @@
+<div class="navbar-wagon">
+  <!-- Logo -->
+  <%= image_tag("https://www.freelogoservices.com/api/main/images/1j+ojVVCOMkX9Wyrexe4hGfR37bA5QwXx1uPwWJpZyYVrFthlCAuhfts8fs...PFheuBBO1hkOd8Q9iCN+UIkX", :alt => "logo", class: "logo-cocktail") %>
+
+  <!-- Right Navigation -->
+  <div class="navbar-wagon-right hidden-xs hidden-sm">
+    <%= link_to "Back", cocktails_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
+
+    <!-- Profile picture with dropdown list -->
+    <div class="navbar-wagon-item">
+      <div class="dropdown">
+        <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+
+      </div>
+    </div>
+  </div>
+    <div class="navbar-wagon-item hidden-md hidden-lg">
+    <div class="dropdown">
+      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+        <li><a href="#">Host</a></li>
+
+      </ul>
+    </div>
+  </div>
+</div>
+
+<% if @cocktail.photo_url == nil %>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://source.unsplash.com/1600x900/?cocktail');">
+<% else %>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= @cocktail.photo_url %>);">
+  <% end %>
+
+  <div class="banner-content">
+     <h1><%= @cocktail.name %></h1>
+       <h3>This cocktail has:</h3>
+       <ul>
+         <% @cocktail.doses.each do |dose| %>
+           <li style="font-size: 20px"><%= dose.description %> | <%= dose.ingredient.name %> - <%= link_to(dose_path(dose), method: :delete) do %>
+               <i class="fas fa-trash-alt"></i>
+             <% end %>
+           </li>
+         <% end %>
+       </ul>
+  </div>
+</div>
 
 <div class="container">
-  <div class="row">
-   <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
-      <h1><%= @cocktail.name %></h1>
-
-      <h3>This cocktail has:</h3>
-      <ul>
-        <% @cocktail.doses.each do |dose| %>
-          <li><%= dose.description %> | <%= dose.ingredient.name %> - <%= link_to(dose_path(dose), method: :delete) do %>
-              <i class="fas fa-trash-alt"></i>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
-
+  <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
       <h4>Add dosage</h4>
 
       <%= simple_form_for([@cocktail, @dose]) do |f| %>
@@ -21,12 +55,9 @@
          <%= f.association :ingredient, label: "Choose the corresponding ingredient" %>
          <%= f.submit "Add here", class: "btn btn-success" %>
      <% end %>
-     <%= link_to 'Back', cocktails_path %>
-     </div>
-    </div>
+
+  </div>
 </div>
-
-
 
 
 
